--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/FullScreen"
-    tools:context="Fragment.ChatFragment">
+    tools:context="com.farhachat.farha.Fragment.ChatFragment">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
