--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#977f95</color>
+    <color name="colorPrimary">#304866</color>
+    <color name="colorPrimaryDark">#9C27B0</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="Action_bar">#158b74</color>
+    <color name="Action_bar">#9C27B0</color>
+    <color name="dark_blue">#000</color>
+    <color name="black">#000</color>
 </resources>
